# MobileRobot

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mobile_robot/share/mobile_robot/: local_setup.sh  package.sh  package.xml
install/mobile_robot/share/mobile_robot/config/: ackermann_controllers.yaml  gz_bridge.yaml  nav2_params.yaml
install/mobile_robot/share/mobile_robot/launch/: ekf.launch.py  gazebo_model.launch.py  gazebo_model_environement.launch.py  test.launch.py
install/mobile_robot/share/mobile_robot/model/: empty_world.world
install/my_kinematics_pkg/share/my_kinematics_pkg/: local_setup.sh  package.sh  package.zsh
install/publisher_subscriber/share/publisher_subscriber/: package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
ws_new/: Commands_copy_paste  comands  convert_odom_to_csv.py  frames_2025-04-17_20.17.45.gv  frames_2025-04-23_13.26.59.gv  frames_2025-04-24_10.48.39.gv  frames_2025-04-26_11.36.44.gv  frames_2025-04-28_15.34.03.gv  frames_2025-04-28_15.50.50.gv  frames_2025-04-28_15.52.05.gv  frames_2025-05-01_13.20.57.gv  frames_2025-05-08_15.38.35.gv  frames_2025-05-22_09.56.55.gv  frames_2025-05-24_10.30.36.gv  odom_data.csv  odom_data.txt  robot.urdf
ws_new/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws_new/install/ackermann_steering_controller/share/ackermann_steering_controller/: package.dsv  (+2 more)
ws_new/install/controller_manager/test/: test_ros2_control_node.yaml
ws_new/install/mobile_robot/include/: backward.hpp
ws_new/log/: latest_build
ws_new/src/: ackermann_steering_controller
ws_new/src/mobile_robot/: CMakeLists.txt  package.xml  setup.py
ws_new/src/mobile_robot/config/: ackermann_controllers.yaml  ekf.yaml  gz_bridge.yaml  nav2_no_map_params.yaml  nav2_params.yaml
ws_new/src/mobile_robot/description/: gps.xacro  lidar.xacro
ws_new/src/mobile_robot/launch/: controller_server_node.py  ekf.launch.py  farm_world.launch.py  gazebo_model.launch.py  robot_gps_nav2.launch.py  robot_gps_nav2_1.launch.py
ws_new/src/mobile_robot/model/: empty_world.world  robot.gazebo  robot.xacro
ws_new/src/my_kinematics_pkg/: CMakeLists.txt
ws_new/src/my_kinematics_pkg/src/: adding_noise_odometry.py  kinematics_node.cpp  kinematics_node1.cpp
ws_new/src/navigation/: package.xml  setup.py
ws_new/src/navigation/navigation/: GPS_path_planing.py  gps_path_follow.py  gps_save_xy_subscriber.py  gps_save_xy_subscriber1.py  our_custom_bt.xml
ws_new/src/publisher_subscriber/: setup.py
ws_new/vectors/: plot_vector.py  state.npy  state.txt  time.txt  velocities.npy  velocities.txt
(+1621 files in other folders)
